--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "printWidth": 80,
+  "printWidth": 40,
+  "editor.wordWrap": "bounded",
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
